<resources>
    <string name="app_name">TheHollowBar</string>
    <string name="login_text">Ingrese sus datos</string>
    <string name="login_text_user">Usuario</string>
    <string name="login_text_password">Contraseña</string>
    <string name="login_text_button">Ingresar</string>
    <string name="back_button_description">Regresar</string>
    <string name="login_text_numDocument">Número de documento</string>
    <string name="login_text_typeDocument">Tipo de documento</string>
    <string name="login_next">Siguiente</string>
    <string name="home_button">Hacer pedido</string>

    <!-- Clave API -->
    <string name="web_client_id">268014156304-2d3qf9hddbirkacl9epp4rs6fmo7h517.apps.googleusercontent.com</string>
    <!-- Clave API -->

    <string-array name="options_array_type_document">
        <item>Cédula de ciudadanía</item>
        <item>Cédula de extranjería</item>
        <item>NIT</item>
    </string-array>
    <string name="title_activity_menu_dashboard">MenuDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>