<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_login"
    tools:context=".LoginClient">

    <FrameLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/shape_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_animation2"
            android:layout_width="153dp"
            android:layout_height="151dp"
            android:layout_marginBottom="384dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/spincircle" />
    </FrameLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/login_icon"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logopng" />

    <Button
        android:id="@+id/buttonNextClient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/button_login"
        android:backgroundTint="#121212"
        android:text="@string/login_next"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/txtLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/login_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <EditText
        android:id="@+id/inputNumDocument"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/input_design"
        android:backgroundTint="#0F0E0E"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/login_text_numDocument"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonNextClient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectTypeDocument"
        app:layout_constraintVertical_bias="0.014"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/labelTypeDocument"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="Tipo de documento"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/selectTypeDocument"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/selectTypeDocument"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/input_design"
        android:backgroundTint="#0B0A0A"
        android:padding="15dp"
        android:text="Selecciona una opción"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableRightCompat="@android:drawable/arrow_down_float"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogIn"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/errorTypeDocument"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectTypeDocument"
        app:layout_constraintWidth_percent="0.9" />

    <ImageButton
        android:id="@+id/buttonBackClient"
        android:layout_width="38dp"
        android:layout_height="39dp"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@mipmap/arrow_left_foreground"
        android:backgroundTint="#0F0E0E"
        android:contentDescription="@string/back_button_description"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
